; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_debugger.c_get_events.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_debugger.c_get_events.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"start_%s\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"done_%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32*)* @get_events to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_events(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i8* @strrchr(i8* %9, i8 signext 92)
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i8*, i8** %7, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 1
  br label %18

16:                                               ; preds = %3
  %17 = load i8*, i8** %4, align 8
  br label %18

18:                                               ; preds = %16, %13
  %19 = phi i8* [ %15, %13 ], [ %17, %16 ]
  store i8* %19, i8** %7, align 8
  %20 = call i32 (...) @GetProcessHeap()
  %21 = load i8*, i8** %7, align 8
  %22 = call i64 @strlen(i8* %21)
  %23 = add nsw i64 6, %22
  %24 = add nsw i64 %23, 1
  %25 = call i8* @HeapAlloc(i32 %20, i32 0, i64 %24)
  store i8* %25, i8** %8, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = call i32 @sprintf(i8* %26, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %27)
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @CreateEventA(i32* null, i32 0, i32 0, i8* %29)
  %31 = load i32*, i32** %5, align 8
  store i32 %30, i32* %31, align 4
  %32 = load i8*, i8** %8, align 8
  %33 = load i8*, i8** %7, align 8
  %34 = call i32 @sprintf(i8* %32, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %33)
  %35 = load i8*, i8** %8, align 8
  %36 = call i32 @CreateEventA(i32* null, i32 0, i32 0, i8* %35)
  %37 = load i32*, i32** %6, align 8
  store i32 %36, i32* %37, align 4
  %38 = call i32 (...) @GetProcessHeap()
  %39 = load i8*, i8** %8, align 8
  %40 = call i32 @HeapFree(i32 %38, i32 0, i8* %39)
  ret void
}

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i8* @HeapAlloc(i32, i32, i64) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i32 @CreateEventA(i32*, i32, i32, i8*) #1

declare dso_local i32 @HeapFree(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
